Fix code review issues: use LinkedList and fix performingAction consistency
Co-authored-by: earlb710 <54583240+earlb710@users.noreply.github.com>